--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                 <div class="descricao">
                     <h3 class="titulo">Descrição</h3>
-                    <p class="texto">Mewtwo foi criado genéticamente em um laboratório, sendo um clone do misterioso e antigo pokémon Mew. Além de possuir habilidades psíquicas e telepaticas capaz de controlar outros pokémon. Seu intelecto talvez supere até mesmo o humano...</p>
+                    <p class="texto">Mewtwo foi criado genéticamente em um laboratório, sendo um clone do misterioso e antigo pokémon Mew. Mewtwo possui habilidades psíquicas e telepaticas, sendo capaz de controlar outros pokémon. Seu intelecto talvez supere até mesmo o humano...</p>
                 </div>
             </li>
 
